# Aniworld-STO-Downloader

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  Windscribe-Frankfurt-Wurstchen-WG.conf  debug_live_sto.py  docker-compose.gluetun.yml  docker-compose.vpn.yml  docker-compose.yml  pyproject.toml  requirements.txt  sto_ep6.html  sto_series.html  test_sto_fix.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.bat  build.yml
src/aniworld/: __main__.py  config.py  entry.py  menu.py  models.py  parser.py  search.py
src/aniworld/action/: common.py  download.py  syncplay.py  watch.py
src/aniworld/common/: __init__.py  common.py
src/aniworld/extractors/provider/: doodstream.py  hdfilme.py  streamtape.py
src/aniworld/movie4k/: __init__.py  movie4k.py  movie4k_stream_finder.py
src/aniworld/web/: __init__.py  app.py  database.py  download_manager.py
src/aniworld/web/static/css/: style.css
src/aniworld/web/static/js/: api.js  app.js  download.js  queue.js  search.js  trackers.js  ui.js
src/aniworld/web/templates/: index.html  login.html  settings.html  setup.html
tests/: test_dns.py  verify_fix.py
